feat: fix style for rules a18y

--- a/src/style/components/_sort-parameters.scss
+++ b/src/style/components/_sort-parameters.scss
@@ -61,7 +61,7 @@
   font-weight: 500;
 
   &::placeholder {
-    color: variables.$grey-medium;
+    color: variables.$black;
     font-weight: 400;
   }
 
