--- a/src/style/components/filters/_check.scss
+++ b/src/style/components/filters/_check.scss
@@ -29,7 +29,7 @@
 
   &__found {
     font-size: 0.8em;
-    color: variables.$grey-medium;
+    color: variables.$black;
     vertical-align: baseline;
   }
 }
