--- a/src/index.css
+++ b/src/index.css
@@ -586,7 +586,7 @@ h2 {
 }
 
 .nav__link {
-  color: #909090;
+  color: #000;
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
@@ -845,19 +845,19 @@ h2 {
 }
 
 .purchase-form__input::-webkit-input-placeholder {
-  color: #CDCDCD;
+  color: #000;
 }
 
 .purchase-form__input:-ms-input-placeholder {
-  color: #CDCDCD;
+  color: #000;
 }
 
 .purchase-form__input::-ms-input-placeholder {
-  color: #CDCDCD;
+  color: #000;
 }
 
 .purchase-form__input::placeholder {
-  color: #CDCDCD;
+  color: #000;
 }
 
 .purchase-form__error {
@@ -1004,7 +1004,7 @@ h2 {
   width: 140px;
   height: 40px;
   background-color: #FFFFFF;
-  color: #2F8569;
+  color: #194E3D;
   border-radius: 20px;
   border: 1px #2F8569 solid;
   -webkit-transition: 0.5s;
@@ -1086,7 +1086,7 @@ h2 {
   border: none;
   background: none;
   cursor: pointer;
-  color: #CDCDCD;
+  color: #000;
   -webkit-transition: .3s;
   transition: .3s;
 }
@@ -1109,7 +1109,7 @@ h2 {
 }
 
 .link-navigation__link, .link-navigation__slash {
-  color: #CDCDCD;
+  color: #000;
   -webkit-transition: .3s;
   transition: .3s;
 }
@@ -1164,7 +1164,8 @@ h2 {
   border-radius: 100%;
   width: 32px;
   height: 32px;
-  font-size: 14px;
+  font-size: 18px;
+  font-weight: 900;
   line-height: 1;
   background-color: #22795D;
   color: #FFFFFF;
@@ -1178,7 +1179,7 @@ h2 {
   right: -8px;
   font-size: 17px;
   font-weight: 900;
-  color: #89c1b0;
+  color: #186049;
 }
 
 .product__discount {
@@ -1200,7 +1201,7 @@ h2 {
 }
 
 .product__type {
-  color: #89c1b0;
+  color: #186049;
 }
 
 .product__title {
@@ -1319,7 +1320,7 @@ h2 {
 
 .cart-list .product__old-price {
   font-size: 20px;
-  color: #CDCDCD;
+  color: #000;
   text-decoration: line-through;
 }
 
@@ -1456,22 +1457,22 @@ h2 {
 }
 
 .sort-input::-webkit-input-placeholder {
-  color: #CDCDCD;
+  color: #000;
   font-weight: 400;
 }
 
 .sort-input:-ms-input-placeholder {
-  color: #CDCDCD;
+  color: #000;
   font-weight: 400;
 }
 
 .sort-input::-ms-input-placeholder {
-  color: #CDCDCD;
+  color: #000;
   font-weight: 400;
 }
 
 .sort-input::placeholder {
-  color: #CDCDCD;
+  color: #000;
   font-weight: 400;
 }
 
@@ -1725,7 +1726,7 @@ h2 {
 }
 
 .full-cart-page__pagination-text {
-  color: #CDCDCD;
+  color: #000;
 }
 
 .amount-number {
@@ -1766,7 +1767,7 @@ h2 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  color: #CDCDCD;
+  color: #000;
   border-radius: 100%;
   border: 0.5px #CDCDCD solid;
 }
@@ -1803,19 +1804,19 @@ h2 {
 }
 
 .full-cart-page__promo-input::-webkit-input-placeholder {
-  color: #CDCDCD;
+  color: #000;
 }
 
 .full-cart-page__promo-input:-ms-input-placeholder {
-  color: #CDCDCD;
+  color: #000;
 }
 
 .full-cart-page__promo-input::-ms-input-placeholder {
-  color: #CDCDCD;
+  color: #000;
 }
 
 .full-cart-page__promo-input::placeholder {
-  color: #CDCDCD;
+  color: #000;
 }
 
 .full-cart-page__promo-button {
@@ -1943,7 +1944,7 @@ h2.error-page__title {
 .error-page__text {
   margin: 30px 0px 50px;
   font-size: 24px;
-  color: #CDCDCD;
+  color: #000;
 }
 
 .error-page__btn {
@@ -2029,7 +2030,7 @@ h2.error-page__title {
 }
 
 .product-page__stoke-amount {
-  color: #CDCDCD;
+  color: #000;
 }
 
 .product-page__price-block {
@@ -2054,7 +2055,7 @@ h2.error-page__title {
 }
 
 .product-page__old-price {
-  color: #CDCDCD;
+  color: #000;
   font-size: large;
   text-decoration: line-through;
 }
@@ -2093,7 +2094,7 @@ h2.error-page__title {
 }
 
 .product-page__specification-name {
-  color: #CDCDCD;
+  color: #000;
   border-bottom: 1px #CDCDCD dotted;
 }
 
