--- a/src/style/pages/_error-page.scss
+++ b/src/style/pages/_error-page.scss
@@ -18,7 +18,7 @@
   align-items: center;
   justify-content: center;
   font-size: 250px;
-  color: variables.$green-light;
+  color: variables.$green-dark;
 }
 
 h2.error-page__title {
@@ -29,13 +29,13 @@ h2.error-page__title {
 .error-page__subtitle {
   margin: 0px;
   font-size: 31px;
-  color: variables.$green-light;
+  color: variables.$green-dark;
 }
 
 .error-page__text {
   margin: 30px 0px 50px;
   font-size: 24px;
-  color: variables.$grey-medium;
+  color: variables.$black;
 }
 
 .error-page__btn {
