--- a/src/style/components/_product-card.scss
+++ b/src/style/components/_product-card.scss
@@ -42,9 +42,10 @@
 
   &__discount {
     background-color: variables.$purple-medium;
-
+    color: variables.$black;
+    font-weight: 900;
     span {
-      color: variables.$purple-light;
+      color: variables.$purple-medium;
     }
 
   }
