fix: change color

--- a/src/style/components/_product-card.scss
+++ b/src/style/components/_product-card.scss
@@ -42,7 +42,7 @@
 
   &__discount {
     background-color: variables.$purple-medium;
-    color: variables.$black;
+    color: #fff;
     font-weight: 900;
     span {
       color: variables.$purple-medium;
