fix change color

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -38,7 +38,7 @@ $green-extra-light: #89c1b0 !default;
 $green-extra-light-opacity: #89c1b030 !default;
 
 /// @type Color
-$purple-medium: #ab5abb !default;
+$purple-medium: #A288E3 !default;
 
 /// @type Color
 $purple-light: #e694ff !default;
