fix: change color

--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -30,7 +30,8 @@
 }
 
 .footer__item a {
-  color: variables.$black;
+  text-decoration: underline;
+  color: variables.$white-medium;
   font-size: 18px;
   font-weight: 800;
 }
