--- a/src/style/components/filters/_range.scss
+++ b/src/style/components/filters/_range.scss
@@ -20,6 +20,18 @@
       outline: none;
     }
 
+    .sr-only {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      margin: -1px;
+      padding: 0;
+      overflow: hidden;
+      clip: rect(0, 0, 0, 0);
+      white-space: nowrap;
+      border: 0;
+    }
+
 
   }
 
@@ -65,7 +77,7 @@
 }
 
 .slider {
-  height: 6px;
+  height: 10px;
   position: relative;
   background: variables.$grey-light;
   border-radius: 6px;
