--- a/src/style/components/_button.scss
+++ b/src/style/components/_button.scss
@@ -52,7 +52,7 @@
   width: 140px;
   height: 40px;
   background-color: variables.$purple-medium;
-  color: variables.$white-medium;
+  color: #222222;
   border-radius: 20px;
   border: none;
   transition: 0.5s;
