--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -35,14 +35,20 @@
   justify-content: center;
   width: 155px;
   height: 155px;
+  min-width: 155px;
+  min-height: 155px;
   transition: .3s;
   border-radius: 100%;
   background-color: variables.$green-dark;
   box-shadow: variables.$shadow;
+  will-change: transform;
+  font-display: swap;
 
   @media (max-width:600px) {
     width: 70px;
     height: 70px;
+    min-width: 70px;
+    min-height: 70px;
     margin-top: 20px;
   }
 
@@ -63,7 +69,6 @@
   }
 
   &:hover {
-    transform: scale(.98);
     box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px;
   }
 
@@ -72,12 +77,14 @@
 .header__logo-text {
   margin: 0;
   color: variables.$white-medium;
+  line-height: 25px;
+  min-height: 50px;
+  min-width: 80px;
   font-weight: 200;
   font-size: 22px;
-  line-height: 25px;
   text-decoration: none;
   padding-left: 5px;
-
+  font-display: swap;
 
   @media (max-width:600px) {
     font-size: 14px;
@@ -97,6 +104,7 @@
   border-bottom: 1px solid;
   border-radius: 3px;
   border-color: variables.$grey-light;
+
 
   @media (max-width:840px) {
     margin-left: 50px;
@@ -175,6 +183,7 @@
 }
 
 .cart__num {
+  min-width: 24px;
   margin-right: -9px;
   transition: 0.5s;
   @include mixins.iconCircle();
@@ -194,6 +203,7 @@
   display: flex;
   gap: 5px;
   align-items: center;
+  font-variant-numeric: tabular-nums;
   justify-content: flex-end;
 
   @media (max-width:600px) {
